--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Display inline</title>
 </head>
 <body>
-    
+    <main>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum amet modi voluptates architecto culpa error doloremque obcaecati quod non sequi sint magni voluptatum saepe officiis qui nesciunt corporis, consequuntur dolores!
+        </div>
+
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit id commodi earum dolores deserunt facilis sapiente. Consequatur quisquam eos impedit illum eaque ut, eveniet soluta harum? Maxime voluptatibus facere nam.
+        </div>
+
+        <div>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora tenetur dolor veritatis illo? Est tempora, mollitia ratione molestiae nobis facilis placeat iusto alias officiis, fugiat, repudiandae ullam provident sunt deleniti.
+        </div>
+    </main>
 </body>
 </html>
